discussion/kv_engine/179724/179724_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53354: Add specific CheckpointIndexAllocatorMemoryTrackingTests

Change-Id: Ifd414c61fa70ddfb1e4aa011a9386773827c26fe

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-09-23 08:20:09.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-09-23 08:20:09.000000000
Message: 
Patch Set 10:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-23 08:36:19.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49640/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49640/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41722/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41722/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31006/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/31006/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21992/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21992/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10331/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/10331/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22601/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22601/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22978/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22978/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23788/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23788/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10432/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/10432/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20620/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4123:29: error: use of undeclared identifier "insertionOverhead" [clang-diagnostic-error]
    size_t perKeyAllocLow = insertionOverhead;
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4124:30: error: use of undeclared identifier "insertionOverhead" [clang-diagnostic-error]
    size_t perKeyAllocHigh = insertionOverhead;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20620/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:4123:29:
error: use of undeclared identifier "insertionOverhead" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20620/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19845/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
